# transcription-service

./: 00-START-HERE.md  CLI_GUIDE.md  info.txt
n8n/: Dockerfile  README.md
transcription-service/: DEPLOY_NOTES.md  USER_GUIDE.md  nixpacks.toml  openapi.json  pyproject.toml  railway.toml  requirements.txt
transcription-service/app/: main.py
transcription-service/app/api/: admin.py  auth.py  deps.py  logs.py  projects.py  transcripts.py  webhooks.py
transcription-service/app/core/: config.py  crypto.py  logging_config.py
transcription-service/app/db/: base.py
transcription-service/app/models/: project.py  transcript.py  user.py
transcription-service/app/schemas/: project.py  transcript.py  user.py
transcription-service/app/services/: gdrive.py  telegram.py  transcription.py  whatsapp.py
transcription-service/app/utils/: s3.py
transcription-service/frontend/: README.md  package.json  railway.toml
transcription-service/frontend/app/: globals.css  page.tsx
transcription-service/frontend/app/admin/: page.tsx
transcription-service/frontend/app/dashboard/: page.tsx
transcription-service/frontend/app/instructions/: page.tsx
transcription-service/frontend/app/transcripts/[id]/: page.tsx
transcription-service/frontend/components/ui/: index.tsx
transcription-service/frontend/lib/: api.ts
transcription-service/scripts/: check_state.py  cleanup_s3.py  grant_admin.py  ide_plugin.py  migrate_db.py  verify_crypto.py
