[tool.poetry]
name = "transcription-service"
version = "0.1.0"
description = "Audio/Video Transcription Service"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
boto3 = "^1.34.0"
python-telegram-bot = "^20.7"
openai = "^1.10.0"
twilio = "^8.11.0"
alembic = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
